@@ -87,18 +87,23 @@ public class Root extends VisibleSplitNode{
      * @param child the child of the root, can be <code>null</code>
      */
     public void setChild( SplitNode child ){
-        if( this.child != null )
-            this.child.setParent( null );
-        this.child = child;
-        if( child != null ){
-            child.delete( false );
-            child.setParent( this );
-        }
-        
-        treeChanged();
-        
-        getAccess().getOwner().revalidate();
-        getAccess().getOwner().repaint();
+    	if( this.child != child ){
+	        if( this.child != null )
+	            this.child.setParent( null );
+	        this.child = child;
+	        if( child != null ){
+	            child.delete( false );
+	            child.setParent( this );
+	        }
+	        
+	        treeChanged();
+	        if( child != null ){
+	        	ensureIdUniqueAsync();
+	        }
+	        
+	        getAccess().getOwner().revalidate();
+	        getAccess().getOwner().repaint();
+    	}
     }
     
     /**
@@ -124,6 +129,19 @@ public class Root extends VisibleSplitNode{
             setChild( child );
         else
             throw new IllegalArgumentException( "Location invalid: " + location );
+    }
+    
+    @Override
+    public int getMaxChildrenCount(){
+    	return 1;
+    }
+    
+    @Override
+    public SplitNode getChild( int location ){
+	    if( location == 0 ){
+	    	return getChild();
+	    }
+	    return null;
     }
     
     @Override
@@ -210,13 +228,8 @@ public class Root extends VisibleSplitNode{
     @Override
     public boolean insert( SplitDockPathProperty property, int depth, Dockable dockable ) {
         if( child == null ){
-        	int size = property.size();
-        	long id = -1;
-        	if( size > 0 ){
-        		id = property.getNode( size-1 ).getId();
-        	}
-        	
-            Leaf leaf = create( dockable, id );
+        	long id = property.getLeafId();
+        	Leaf leaf = create( dockable, id );
             if( leaf == null )
                 return false;
             setChild( leaf );
